[COLAB-1400]  debugged counting; fixed spacing in contestCard

--- a/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-ContestCard.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-ContestCard.scss
@@ -64,7 +64,7 @@ $c-ContestCard__shadow--hover:  0 0 10px  $t-Color__grey--light;
   float: left;
   width: 184px;
   font-size: 14px;
-  line-height: 19px;
+  line-height: 20px;
   padding: 8px;
   overflow: hidden;
   color: $c-ContestCard__text__textColor;
